...
            android:textStyle="bold"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:layout_below="@id/imageViewLogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="240dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewSignUp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/text_rounded_border"
                    android:drawableEnd="@drawable/mail"/>
            </RelativeLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="240dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTextInputLayout"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:background="@drawable/text_rounded_border"
                    android:drawablePadding="8dp"/>

                <ImageButton
                    android:id="@+id/passwordToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="false"
                    android:contentDescription="Toggle Password Visibility"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:onClick="togglePasswordVisibility"
                    android:padding="8dp"
                    android:src="@drawable/hide" />
            </RelativeLayout>
...
            android:textColor="#FF0000"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewError"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:background="@drawable/button_design_general"
...
