<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="3">

    <!-- Barra laterale -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#232196F3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSidebarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="STATO"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Login"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Welcome"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_waiting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Waiting"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_ordering"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C92196F3"
            android:padding="10dp"
            android:text="Ordering"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_serving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Serving"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/item_attesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Processing"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_chatBot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="ChatBot"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/item_farewelling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Farewelling"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Signup"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_interview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Interview"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_outofsight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Out Of Sight"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Gone"
            android:typeface="monospace"/>

    </LinearLayout>


    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="380dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="Logo"
            android:src="@drawable/pic4ordering" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/exitToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/exit"
                android:clickable="false"
                android:onClick="ExitOrdering"
                android:contentDescription="Toggle Email Visibility"
                android:paddingLeft="5dp"/>

            <ImageButton
                android:id="@+id/userToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/user"
                android:clickable="false"
                android:contentDescription="Toggle Email Visibility"
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/textViewLoggedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Utente Loggato"
                android:padding="8dp"
                android:layout_toEndOf="@id/userToggle"
                android:layout_centerVertical="true"
                android:onClick="onClickExit"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewLogo"
            android:layout_centerHorizontal="true"
            android:text="Ti consigliamo:"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_margin="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textViewDrinkName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/buttonOrderRecommendedDrink"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_design_general"
                    android:clickable="true"
                    android:focusable="true"
                    android:cursorVisible="true"
                    android:onClick="onClickConsigliato"
                    android:padding="10dp"
                    android:text="Ordina"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textViewOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView"
            android:layout_centerHorizontal="true"
            android:text="oppure"
            android:layout_marginTop="20dp"
            android:textColor="#757575"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/textViewTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOr"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Scegli dalla lista:"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinnerDrinks"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textViewOrderMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#757575"
            android:layout_below="@id/buttonOrder"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/buttonOrder"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerDrinks"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_design_general"
            android:focusable="true"
            android:clickable="true"
            android:cursorVisible="true"
            android:entries="@array/dropdown_items"
            android:onClick="onClickOrdina"
            android:padding="10dp"
            android:text="Ordina"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>
