...
    <string name="interview_text">Interview</string>
    <string name="outofsight_text">Out Of Sight</string>
    <string name="gone_text">Gone</string>
    <string name="drink_preference_text">Che drink preferisci?</string>
    <string name="topic_preference_text">Che argomenti preferisci?</string>
    <string name="register_button_text">Registrati</string>
    <string name="riprendi">Riprendi</string>
    <string name="tempo_rimanente">Tempo rimanente</string>
    <string name="_10s">10s</string>
    <string name="utente_loggato">Utente Loggato</string>
    <string name="ti_sei_allontanato">Ti sei allontanato</string>
    <string name="stato">STATO</string>
    <string name="login">Login</string>
...
    <string name="out_of_sight">Out Of Sight</string>
    <string name="gone">Gone</string>
    <string name="logo">Logo</string>
    <string name="toggle_email_visibility">Toggle Email Visibility</string>
    <string name="accedi_come_ospite">Accedi come Ospite</string>
    <string name="non_hai_un_account_registrati">Non hai un account? Registrati!</string>
    <string name="accedi">Accedi</string>
</resources>


